Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und [SemVer](https://semver.org/lang/de/).

---

## [1.5.0] – 2025-10-16
### Added
- Neuer zweiphasiger Zuweisungsmodus: Modal → Live-UI
- Drag-&-Drop zwischen Farblayer-Gruppen und echten Modul-Elementen
- Sofortige Farbübernahme und persistente Speicherung

## [1.4.0] – 2025-10-16
### Added
- Direktzuweisungsmodus (🧩) zum intuitiven Zuordnen von Buttons und Überschriften.
- Testoberfläche mit Buttons und Unterbereichen für visuelle Farblayer-Tests.
- Drag-&-Drop-Konfigurator in modaler Ansicht.
### Changed
- FarblayerViewer in modales Layout überführt.

## [1.3.0] – 2025-10-16
### Added
- Drag-&-Drop-Farbkonfigurator ersetzt bisherige Dropdown-Menüs.
- Live-Preview und Gruppenzuordnung pro Modul.

## [1.2.0] – 2025-10-15
### Added
- Kombinierte Vorschau der Farbschemata direkt in der Dropdown-Auswahl inklusive Farbfelder für Hintergrund, Schrift und Rahmen.
- Speicherung der zuletzt gewählten Farbzusammenstellung zur automatischen Wiederherstellung beim erneuten Öffnen des Moduls.

### Changed
- Überarbeitete Moduloberfläche mit gruppierten Aktionen, neuen Vorschaukarten und klareren Statusmeldungen.
- Verbesserte Handhabung von Dateihandles sowie Fehlermeldungen beim Laden der Farblayer-Konfiguration.

## [1.1.2] – 2025-09-26
### Added
- Direkter Zugriff auf `FarblayerConfig.json` über den ausgewählten Arbeitsordner inklusive rekursiver Suche nach dem Dateinamen.
### Fixed
- Verhindert fehlerhafte relative Dateipfade im lokalen Kontext, indem der globale Arbeitsordner Vorrang vor Netzwerkanfragen erhält.

## [1.1.1] – 2025-09-25
### Added
- Globale Fallback-Suche nach `FarblayerConfig.json` inklusive Protokollierung fehlgeschlagener Pfadversuche und Debug-Standardwerten als Fehlerhilfe.
### Changed
- Zwischenspeicherung merkt sich den letzten erfolgreichen Pfad zur Farblayer-Konfiguration.

## [1.1.0] – 2025-09-24
### Changed