@@ -10,6 +10,7 @@ Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und 
 - Neuer zweiphasiger Zuweisungsmodus: Modal → Live-UI
 - Drag-&-Drop zwischen Farblayer-Gruppen und echten Modul-Elementen
 - Sofortige Farbübernahme und persistente Speicherung
+- Test-Hauptoberfläche mit zusätzlichen Überschriften und Buttons direkt im Modul
 
 ## [1.4.0] – 2025-10-16
 ### Added
